--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Tsubonofuta</string>
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
     <string name="settings_thread_title">Remove ads in thread</string>
     <string name="settings_thread_desc">Removes ads in thread viewer. It does not apply to the home screen.</string>
     <string name="settings_inline_title">Remove inline ads</string>
