Add ability viewing licenses

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -6,4 +6,6 @@
     <string name="settings_inline_title">インライン広告を削除</string>
     <string name="settings_inline_desc">ChMate 0.8.10.150 以降でのみ機能します。</string>
     <string name="settings_github_desc">タップして GitHub リポジトリを開く。</string>
+    <string name="settings_status_title">%1s バージョン %2s</string>
+    <string name="settings_status_desc">タップしてライセンスを閲覧する。</string>
 </resources>
