Update some strings

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -2,9 +2,9 @@
 <resources>
     <string name="app_name">Tsubonofuta</string>
     <string name="settings_thread_title">スレッド内広告を削除</string>
-    <string name="settings_thread_desc">スレッド内広告を削除します。ホーム画面には適用されません。</string>
+    <string name="settings_thread_desc">スレッド内広告を削除します。ホーム画面には適用されません (必要な場合は ChMate+ を購入してください)。</string>
     <string name="settings_inline_title">インライン広告を削除</string>
-    <string name="settings_inline_desc">ChMate 0.8.10.150 以降でのみ機能します。</string>
+    <string name="settings_inline_desc">ChMate 0.8.10.150 以降に追加されたインライン広告を削除します。</string>
     <string name="settings_github_desc">タップして GitHub リポジトリを開く。</string>
     <string name="settings_status_title">%1s バージョン %2s</string>
     <string name="settings_status_desc">タップしてライセンスを閲覧する。</string>
