--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="repository_url" translatable="false">https://github.com/AioiLight/Tsubonofuta</string>
     <string name="title_activity_settings" translatable="false">Tsubonofuta</string>
     <string name="settings_thread_title">Remove ads in thread</string>
-    <string name="settings_thread_desc">Removes ads in thread viewer. It does not apply to the home screen.</string>
+    <string name="settings_thread_desc">Removes ads in thread viewer. It does not apply to the home screen (Purchase ChMate+ if you want).</string>
     <string name="settings_inline_title">Remove inline ads</string>
-    <string name="settings_inline_desc">Only works with ChMate 0.8.10.150 and above.</string>
+    <string name="settings_inline_desc">Removes inline ads added since ChMate 0.8.10.150.</string>
     <string name="settings_github_title" translatable="false">AioiLight/GitHub</string>
     <string name="settings_github_desc">Tap to open GitHub repository.</string>
     <string name="settings_status_title">%1s version %2s</string>
